# sensormouse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  local.properties  pyproject.toml  upload_release.sh
android-app/: README_BUILD.md  build_apk.sh  download_gradle_wrapper.sh  generate_apk.sh  settings.gradle
android-app/app/: build.gradle  proguard-rules.pro  release.properties
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/droidmouse/android/: MainActivity.kt  WelcomeActivity.kt
android-app/app/src/main/java/com/sensormouse/android/: MainActivity.kt  WelcomeActivity.kt
android-app/app/src/main/java/com/sensormouse/android/billing/: BillingManager.kt
android-app/app/src/main/java/com/sensormouse/android/premium/: PremiumManager.kt
android-app/app/src/main/res/drawable/: ic_mouse.xml  ic_mouse_left.xml  ic_mouse_middle.xml  ic_mouse_right.xml  ic_port.xml  ic_server.xml  ic_star.xml  ic_status_offline.xml
android-app/app/src/main/res/layout/: activity_main.xml  activity_welcome.xml
android-app/app/src/main/res/values/: billing_products.xml  colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: backup_rules.xml
docs/: INSTALLATION.md  TECHNICAL_SPECS.md  USAGE_GUIDE.md
docs/images/: README.md  README_GENERATED.md  SCREENSHOTS.md  app_screenshots.md  generate_images.md  installation_diagram.md  server_screenshots.md
docs/images/app/: main_screen_disconnected.md
docs/images/diagrams/: installation_flow.md
docs/images/infographics/: version_comparison.md
docs/images/server/: terminal_connected.md
docs/images/use_cases/: presentations.md
scripts/: generate_images.py  install.sh
server/: main.py  requirements.txt  utils.py
website/: README.md  api.html  changelog.html  contributing.html  demo.html  faq.html  index.html  instalacion.html  installation.html  roadmap.html  technical_specs.html  troubleshooting.html
website/assets/css/: responsive.css  style.css
website/assets/js/: main.js
website/docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  INSTALLATION.md  ROADMAP.md  TECHNICAL_SPECS.md  TROUBLESHOOTING.md
