[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidmouse"
version = "1.0.0"
description = "Ratón virtual usando el giroscopio del móvil"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DroidMouse Team", email = "team@droidmouse.dev"}
]
keywords = ["mouse", "gyroscope", "android", "control", "sensors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.7"
dependencies = [
    "pyautogui>=0.9.54",
    "numpy>=1.24.3",
    "scipy>=1.11.1",
    "psutil>=5.9.5",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/droidmouse/droidmouse"
Repository = "https://github.com/droidmouse/droidmouse"
Documentation = "https://github.com/droidmouse/droidmouse/blob/main/docs/"
Issues = "https://github.com/droidmouse/droidmouse/issues"

[project.scripts]
droidmouse = "server.main:main"

[tool.setuptools.packages.find]
where = ["server"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 